<resources>
    <string name="app_name">NotifUCC</string>
    <string name="title_activity_login">NotificacionesUCC</string>

    <!-- Strings related to login -->
    <string name="prompt_firstname">Nombre</string>
    <string name="prompt_lastname">Apellido</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_new_password">Nueva contraseña</string>
    <string name="prompt_repeat_password">Repita la contraseña</string>
    <string name="prompt_key">Clave de alumno</string>
    <string name="error_invalid_password">Contraseña inválida</string>
    <string name="error_incorrect_password">Constraseña incorrecta</string>
    <string name="error_match">Las contraseñas no coinciden</string>
    <string name="error_field_required">Se requiere completar este campo</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to buttons -->
    <string name="action_cancel">Cancelar</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Registrarse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_send_msg">SendMsgActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
